Don't build .kra file if image is empty

Happens when drag&dropping empty layers.

Can cause modulo by zero crash in `KisDocument::generatePreview`
when dragging onto canvas, or somewhere in QuaZip when dragging
outside of Krita.

BUG:429049