plugins/impex/kra/kra_converter.cpp
@@ -140,6 +140,10 @@ QList<KisPaintingAssistantSP> KraConverter::assistants()
 
 KisImportExportErrorCode KraConverter::buildFile(QIODevice *io, const QString &filename)
 {
+    if (m_image->size().isEmpty()) {
+        return ImportExportCodes::Failure;
+    }
+    
     setProgress(5);
     m_store = KoStore::createStore(io, KoStore::Write, m_doc->nativeFormatMimeType(), KoStore::Zip);
 
